Fix broken in 0.8.1 styles

--- a/src/styles/panel.scss
+++ b/src/styles/panel.scss
@@ -2,7 +2,7 @@ body #cli.cli.cli-holder {
 	max-height: 64%;
 	z-index: 65535;
 
-	&-panel {
+	.cli-panel {
 		height: 0;
 		position: absolute;
 		top: 0;
@@ -15,12 +15,11 @@ body #cli.cli.cli-holder {
 		transition: height 0.64s linear;
 	}
 
-	&-panel.show {
+	.cli-panel.show {
 		height: 64%;
-		min-height: 64px;
 	}
 
-	&-history {
+	.cli-history {
 		overflow: auto;
 		white-space: pre-wrap;
 		position: absolute;
@@ -32,7 +31,7 @@ body #cli.cli.cli-holder {
 		}
 	}
 
-	&-line {
+	.cli-line {
 		position: absolute;
 		bottom: 0;
 		height: 20px;
@@ -40,12 +39,12 @@ body #cli.cli.cli-holder {
 		display: table;
 	}
 
-	&-prompt {
+	.cli-prompt {
 		display: table-cell;
 		width: 1px;
 	}
 
-	input[type=text]&-command {
+	input[type=text].cli-command {
 		background: none;
 		border: 0;
 		color: white;
@@ -57,7 +56,7 @@ body #cli.cli.cli-holder {
 		display: table-cell;
 	}
 
-	&-loader {
+	.cli-loader {
 		position: absolute;
 		bottom: 0;
 		height: 20px;
